use localStorage instead of session storage

--- a/password_template.html
+++ b/password_template.html
@@ -188,12 +188,11 @@
 
         if (decryptedHMAC !== encryptedHMAC) {
             alert("Bad passphrase!");
-            sessionStorage.removeItem(STORAGE_KEY);
+            localStorage.removeItem(STORAGE_KEY);
             return;
         }
 
-        // Save for the session
-        sessionStorage.setItem(STORAGE_KEY, pass);
+        localStorage.setItem(STORAGE_KEY, pass);
 
         const plainHTML = decryptContent(encryptedHTML, pass);
 
@@ -202,8 +201,8 @@
     }
 
     function onload() {
-        if (sessionStorage.getItem(STORAGE_KEY))
-            decryptAndReplace(sessionStorage.getItem(STORAGE_KEY));
+        if (localStorage.getItem(STORAGE_KEY))
+            decryptAndReplace(localStorage.getItem(STORAGE_KEY));
 
         // Show page because there isn't a good password
         // Otherwise, document.write would have stop this
